syntax = "proto3";

package parsed;

option go_package = "github.com/yb2020/odoc-proto/gen/go/parsed";

// BBox 表示文档中元素的边界框
message BBox {
  double x0 = 1;
  double y0 = 2;
  double x1 = 3;
  double y1 = 4;
  double origin_height = 5;
  double origin_width = 6;
  int32 page_number = 7; // 页码，可选
}

// PageInfo 表示文档的页面信息
message PageInfo {
  int32 page_number = 1;
  double width = 2;
  double height = 3;
}

// Author 表示文档的作者信息
message Author {
  string full_name = 1;
  string given_name = 2;
  string surname = 3;
  string email = 4;
  BBox bbox = 5; // 可选
}

// CatalogueItem 表示目录中的一个条目
message CatalogueItem {
  string title = 1;           // 章节标题
  string formatted_title = 2; // 格式化章节标题
  repeated CatalogueItem child = 3; // 子章节列表
  BBox bbox = 4;              // 章节标题的边界框，可选
  string level = 5;           // 章节层级，如1、1.1、1.1.1等，可选
  string title_order = 6;     // 章节序号，如1、2、3等，可选
  int32 order = 7;            // 原始解析顺序，可选
}

// Reference 表示文档中的引用
message Reference {
  string title = 1;       // 引用的标题
  BBox bbox = 2;          // 引用的边界框
  string ref_idx = 3;     // 引用的索引标识
  string publish_date = 4; // 发布日期
  string search_key = 5;   // 搜索关键词
  repeated Author authors = 6; // 作者列表
  string content_text = 7; // 引用的原始文本内容
  string arxiv_id = 8;     // arXiv ID
}

// RefMarker 表示文档中的引用标记
message RefMarker {
  string ref_idx = 1;
  BBox bbox = 2;
  string ref_content = 3;
}

// FigureTable 表示文档中的图表标记
message FigureTable {
  BBox bbox = 1;
  string ref_content = 2;
  BBox ref_bbox = 3;
  string ref_idx = 4;
  // 图表类型，如 figure、table 等
  string type = 5;
  string id = 6;
  // 属于目录id
  string section_id = 7;
  string section_title = 8;
}

// content_list.json 中的 title
message ContentTitle {
  //文本
  string text = 1;
  //标题级别
  int32 level = 2;
  //页码
  int32 page_number = 3;
}

// Formula 表示文档中的公式
message Formula {
  BBox bbox = 1;
  string ref_content = 2;
  string ref_idx = 3;
  string id = 4;
  // 属于目录id
  string section_id = 5;
  string section_title = 6;
}

message Doi{
  string doi = 1;
  string type = 2;
}

// RefInfo 表示引用信息
message RefInfo {
  string text = 1;    // 引用的显示文本，如 [13]
  string target = 2;  // 引用的目标ID，如 b12
  BBox bbox = 3;      // 引用的边界框，可选
}

// 段落类型的枚举
enum ParagraphType {
  UNKOWN = 0;
  TEXT = 1;
  IMAGE = 2;
  FORMULA = 3;
  TABLE = 4;
}


// Paragraph 表示文档中的一个段落  段落不包含摘要 致谢 标题 等
message Paragraph {
  ParagraphType type = 1;               // 段落类型（正文、引用、标题等），可选
  string section_title = 2;       // 所属章节标题，可选
  string section_id = 3;          // 所属章节ID，用于关联到目录结构，可选
  repeated RefInfo references = 4; // 段落中的引用信息，可选
  Text text = 5;
  Formula formula = 6;  // 段落中的公式文本，可选
  FigureTable figure_table = 7; // 段落中的图表文本，可选
  int32 order = 8; // 段落的原始解析顺序，可选

}

message Text {
  BBox bbox = 1;
  string text = 2;
  repeated Sentence sentences = 3;
}

message Abstract {
  BBox bbox = 1;
  string text = 2;
}

message Acknowledgment {
  BBox bbox = 1;
  string text = 2;
}

message Title {
  BBox bbox = 1;
  string text = 2;
}

//句子
message Sentence {
  int32 index = 1;                // 句子在段落中的索引
  string text = 2;                // 句子的文本内容
  BBox bbox = 3;                  // 句子的边界框，可选
}

// DocumentMeta 是文档的元数据，包含元数据、位置信息
message DocumentMetadata {
  string grobid_version = 1;        // GROBID处理引擎的版本号
  string grobid_ts = 2;             // GROBID处理的时间戳
  repeated Author authors = 3;
  string date = 4;
  repeated Doi dois = 5;
  string fileSHA256 = 6;                // 原始PDF文件的SHA256哈希值，用于唯一标识
  string lang = 7;                  // 文档的主要语言代码
  Abstract abstract = 8;              // 文档的摘要内容
  Title title = 9;                 // 文档的标题
  Acknowledgment acknowledgment = 10;       // 文档的致谢内容
  repeated CatalogueItem catalogue = 11; // 文档的目录结构信息，包含章节层次
  repeated Reference references = 12;    // 文档中的参考文献列表
  repeated RefMarker reference_markers = 13;  // 文档中的引用标记，如[1]、[Smith et al.]等
  repeated FigureTable figures_and_tables = 14; // 文档中的图表标记，如Figure 1、Table 2等
  repeated RefMarker figure_and_table_markers = 15; // 文档中的图表引用标记
  repeated PageInfo pages = 16;         // 文档的页面信息，包含每页的尺寸和编号，可选
  repeated Formula formulas = 17;       // 文档的公式列表
}

// DocumentHeader 是文档的头部信息，包含元数据、位置信息
message DocumentHeader {
  string grobid_version = 1;        // GROBID处理引擎的版本号
  string grobid_ts = 2;             // GROBID处理的时间戳
  Abstract abstract = 3;              // 文档的摘要内容
  Title title = 4;                 // 文档的标题
  string fileSHA256 = 5;                // 原始PDF文件的SHA256哈希值，用于唯一标识
  string lang = 6;                  // 文档的主要语言代码
  string date = 7;                 // 文档的日期
  repeated Doi dois = 8;
  repeated Author authors = 9;
}


// FullDocument 是完整的文档
message FullDocument {
  repeated Paragraph paragraphs = 1;
}    
//==================== 全文翻译 协议 ====================

// 页面块的行文本内容
message BlockText {
  //坐标
  BBox bbox = 1;
  //文本内容
  string text = 2;
  //是否跨页
  bool cross_page = 3;
}
// 页面块
message PageBlock {
  // 块类型
  PageBlockType type = 1; 
  // 块的边界框
  BBox bbox = 2;
  // 块的文本内容 文本内容是一个数组
  repeated BlockText texts = 3;
  //块的index序号
  int32 index = 4;
  //是否删除行（这里的意思代表的是，当前块是属于第一页段落中的内容，内容跨页了，需要删除，这里的坐标代表了跨页的文本行）
  bool lines_deleted = 5;
  //级别（当块类型是标题时，这里才设置级别）
  int32 level = 6;
}

//页面块存储的数据结构
message PageBlockData {
  // 页面的序号
  int32 page_index = 1;
  // 块的内容
  repeated PageBlock page_blocks = 2;
}

//页面块类型
enum PageBlockType {
  PAGE_BLOCK_DEFAULT = 0;               // 默认
  PAGE_BLOCK_TITLE = 1;               // 标题
  PAGE_BLOCK_PLAIN_TEXT = 2;          // 文本
  PAGE_BLOCK_ABANDON = 3;             // 包括页眉页脚页码和页面注释
  PAGE_BLOCK_FIGURE = 4;              // 图片
  PAGE_BLOCK_FIGURE_CAPTION = 5;      // 图片描述
  PAGE_BLOCK_TABLE = 6;               // 表格
  PAGE_BLOCK_TABLE_CAPTION = 7;       // 表格描述
  PAGE_BLOCK_TABLE_FOOTNOTE = 8;      // 表格注释
  PAGE_BLOCK_ISOLATE_FORMULA = 9;     // 行间公式
  PAGE_BLOCK_FORMULA_CAPTION = 10;     // 行间公式的标号
  PAGE_BLOCK_EMBEDDING = 11;          // 行内公式
  PAGE_BLOCK_ISOLATED = 12;           // 行间公式
  PAGE_BLOCK_TEXT = 13;               // OCR 识别结果
}
